feat: add archive job

--- a/src/pages/job-offer-reject/overview/desktop/desktop.module.scss
+++ b/src/pages/job-offer-reject/overview/desktop/desktop.module.scss
@@ -33,3 +33,16 @@
   flex-direction: column;
   gap: 1rem;
 }
+
+.archivedBox {
+  background-color:  var(--color-off-white-01);
+  display: flex;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.archivedBoxImage {
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+}
