--- a/src/pages/job-offer-reject/overview/components/overview/overview.module.scss
+++ b/src/pages/job-offer-reject/overview/components/overview/overview.module.scss
@@ -27,3 +27,22 @@
     margin-top: 1rem;
   }
 }
+
+.header {
+  display: flex;
+  justify-content: space-between;
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.mobileArchived {
+  display: flex;
+  background-color: var(--color-off-white-01);
+  padding: 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.mobileArchivedImage {
+  margin-right: 8px;
+  width: 15px;
+}
