--- a/src/components/atoms/impact-bar-level/impact-bar-level.module.scss
+++ b/src/components/atoms/impact-bar-level/impact-bar-level.module.scss
@@ -39,7 +39,7 @@
   position: absolute;
   left: 0;
   bottom: 2rem;
-  font-family: sans-serif;
+  font-family: Inter;
   font-size: var(--font-size-s);
   color: white;
 }
@@ -48,7 +48,7 @@
   position: absolute;
   right: 0;
   bottom: 2rem;
-  font-family: sans-serif;
+  font-family: Inter;
   font-size: var(--font-size-s);
   color: white;
 }
@@ -61,7 +61,7 @@
   right: 0;
   bottom: 2rem;
   font-size: var(--font-size-m);
-  font-family: sans-serif;
+  font-family: Inter;
   margin-left: auto;
   margin-right: auto;
   color: white;
@@ -73,7 +73,7 @@
   left: 0;
   top: 2rem;
   font-size: var(--font-size-s);
-  font-family: sans-serif;
+  font-family: Inter;
   color: white;
 }
 
@@ -82,6 +82,6 @@
   right: 0;
   top: 2rem;
   font-size: var(--font-size-s);
-  font-family: sans-serif;
+  font-family: Inter;
   color: white;
 }
