--- a/src/components/atoms/impact-bar-simple/impact-bar-simple.module.scss
+++ b/src/components/atoms/impact-bar-simple/impact-bar-simple.module.scss
@@ -40,7 +40,7 @@
   font-size: 10px;
   color: var(--color-gray-01);
   font-weight: 400;
-  font-family: sans-serif;
+  font-family: Inter;
   :last-child {
     margin-left: auto;
   }
