--- a/src/components/atoms/typography/typography.module.scss
+++ b/src/components/atoms/typography/typography.module.scss
@@ -2,7 +2,7 @@
   margin: 0;
   padding: 0;
   user-select: none;
-  font-family: Inter, sans-serif;
+  font-family: Inter, Inter;
   font-size: var(--font-size-m);
   color: var(--font-color-primary);
 }
