--- a/src/components/molecules/job-history-item/job-history-item-donation/job-history-item-donation.module.scss
+++ b/src/components/molecules/job-history-item/job-history-item-donation/job-history-item-donation.module.scss
@@ -38,14 +38,14 @@
   grid-area: name;
   color: var(--color-black-01);
   font-size: var(--font-size-l);
-  font-family: sans-serif;
+  font-family: Inter;
   font-weight: 400;
 }
 .amount {
   grid-area: amount;
   color: var(--color-gray-01);
   font-size: 0.875rem;
-  font-family: sans-serif;
+  font-family: Inter;
 }
 
 .date {
@@ -62,11 +62,11 @@
   justify-content: flex-end;
   color: var(--color-success-01);
   font-size: var(--font-size-xl);
-  font-family: sans-serif;
+  font-family: Inter;
 }
 
 .total {
   font-size: 0.875rem;
   color: var(--color-gray-01);
-  font-family: sans-serif;
+  font-family: Inter;
 }
