--- a/src/components/templates/divider/divider.module.scss
+++ b/src/components/templates/divider/divider.module.scss
@@ -22,7 +22,7 @@
     font-size: 1.25rem;
     color: var(--color-gray-03);
     font-weight: 600;
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
   }
 }
 .icon {
