--- a/src/pages/organization-create/verified/desktop/desktop.module.scss
+++ b/src/pages/organization-create/verified/desktop/desktop.module.scss
@@ -41,7 +41,7 @@
   }
 
   .title {
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
     font-weight: 600;
     font-size: var(--font-size-l);
     text-align: center;
