--- a/src/pages/organization-create/verified/mobile/mobile.module.scss
+++ b/src/pages/organization-create/verified/mobile/mobile.module.scss
@@ -15,7 +15,7 @@
   padding: 0 2rem;
 
   .title {
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
     font-weight: 600;
     font-size: var(--font-size-l);
     text-align: center;
