--- a/src/pages/sign-up/sign-up-user-onboarding/components/Skills/skills.module.scss
+++ b/src/pages/sign-up/sign-up-user-onboarding/components/Skills/skills.module.scss
@@ -3,7 +3,7 @@
 }
 
 .title {
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   font-weight: 600;
