--- a/src/pages/sign-up/sign-up-user-onboarding/components/social-causes/social-causes.module.scss
+++ b/src/pages/sign-up/sign-up-user-onboarding/components/social-causes/social-causes.module.scss
@@ -4,7 +4,7 @@
 
 .title {
   //@todo: use variable for font
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
   font-weight: 600;
