--- a/src/components/_reset.scss
+++ b/src/components/_reset.scss
@@ -18,7 +18,7 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: 'Work Sans';
+  font-family: 'Inter';
   color: var(--color-black-01);
 }
 
