--- a/src/components/atoms/level-badge/level-badge.module.scss
+++ b/src/components/atoms/level-badge/level-badge.module.scss
@@ -6,7 +6,7 @@
   color: white;
   justify-content: center;
   align-items: center;
-  font-family: sans-serif;
+  font-family: Inter;
   font-style: normal;
   font-weight: 600;
   font-size: 1.25rem;
