--- a/src/components/atoms/tabs/tabs.module.scss
+++ b/src/components/atoms/tabs/tabs.module.scss
@@ -27,7 +27,7 @@
   align-items: center;
   box-sizing: border-box;
   cursor: pointer;
-  font-family: sans-serif;
+  font-family: Inter;
   font-weight: 400;
   font-size: var(font-size-m);
   color: var(--color-gray-03);
