--- a/src/components/organisms/contact-list/contact-list.module.scss
+++ b/src/components/organisms/contact-list/contact-list.module.scss
@@ -19,7 +19,7 @@
   padding: 0 2rem;
 
   .title {
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
     font-weight: 600;
     font-size: var(--font-size-l);
     color: var(--color-gray-01);
