--- a/src/pages/achievements/components/header/header.module.scss
+++ b/src/pages/achievements/components/header/header.module.scss
@@ -3,7 +3,7 @@
   max-height: 29rem;
   background: linear-gradient(166.7deg, #00ba88 23.58%, #2f4786 89.68%);
   color: #ffffff;
-  font-family: sans-serif;
+  font-family: Inter;
   display: flex;
   flex-direction: column;
   align-items: center;
