--- a/src/pages/job-apply/confirm/mobile/mobile.module.scss
+++ b/src/pages/job-apply/confirm/mobile/mobile.module.scss
@@ -6,7 +6,7 @@
 
 .title {
   color: var(--color-primary-01);
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-style: normal;
   font-weight: 600;
   font-size: var(--font-size-l);
