--- a/src/pages/jobs/desktop/desktop.module.scss
+++ b/src/pages/jobs/desktop/desktop.module.scss
@@ -25,7 +25,7 @@
   font-size: var(--font-size-xl);
   color: #ffffff;
   font-weight: 600;
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
 }
 
 .tagline {
