--- a/src/pages/levels/header/header.module.scss
+++ b/src/pages/levels/header/header.module.scss
@@ -2,7 +2,7 @@
   height: 16rem;
   max-height: 16rem;
   padding: 1rem;
-  font-family: sans-serif;
+  font-family: Inter;
   display: flex;
   flex-direction: column;
   align-items: center;
