--- a/src/pages/network/desktop/desktop.module.scss
+++ b/src/pages/network/desktop/desktop.module.scss
@@ -41,7 +41,7 @@
     font-size: var(--font-size-xl);
     color: #ffffff;
     font-weight: 600;
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
   }
 
   .tagline {
