--- a/src/pages/organization-create/culture/desktop/desktop.module.scss
+++ b/src/pages/organization-create/culture/desktop/desktop.module.scss
@@ -44,7 +44,7 @@
 .question {
   padding: 0 1.5rem;
   font-size: 1.25rem;
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-weight: 600;
   display: flex;
   align-items: center;
