--- a/src/pages/organization-create/intro/desktop/desktop.module.scss
+++ b/src/pages/organization-create/intro/desktop/desktop.module.scss
@@ -34,7 +34,7 @@
   }
 
   .title {
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
     font-style: normal;
     font-weight: 600;
     font-size: var(--font-size-l);
