--- a/src/pages/organization-create/social-impact/mobile/mobile.module.scss
+++ b/src/pages/organization-create/social-impact/mobile/mobile.module.scss
@@ -34,7 +34,7 @@
 .question {
   padding: 1rem;
   font-size: 1.25rem;
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-weight: 600;
   display: flex;
   align-items: center;
