--- a/src/pages/organization-create/succeed/desktop/desktop.module.scss
+++ b/src/pages/organization-create/succeed/desktop/desktop.module.scss
@@ -35,7 +35,7 @@
   padding-top: 2.5rem;
 
   .primary {
-    font-family: 'Hahmlet';
+    font-family: 'Inter';
     font-weight: 600;
     text-align: center;
     font-size: var(--font-size-l);
