--- a/src/pages/organization-create/type/mobile/mobile.module.scss
+++ b/src/pages/organization-create/type/mobile/mobile.module.scss
@@ -10,7 +10,7 @@
   align-items: center;
   padding-left: 1.5rem;
   font-size: 1.25rem;
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   font-weight: 600;
   color: var(--color-black-01);
   border-bottom: 1px solid var(--color-gray-03);
