--- a/src/pages/sign-up/AllowNotification/allow-notification.module.scss
+++ b/src/pages/sign-up/AllowNotification/allow-notification.module.scss
@@ -11,7 +11,7 @@
 }
 .card {
   background-color: var(--color-primary-01);
-  font-family: 'Hahmlet';
+  font-family: 'Inter';
   width: 33.75rem;
   border: 0.1rem solid var(--color-gray-04);
   border-radius: 1.2rem;
