feat: add badge for profile status

--- a/src/components/atoms/avatar/avatar.module.scss
+++ b/src/components/atoms/avatar/avatar.module.scss
@@ -17,3 +17,16 @@
 .img {
   height: 100%;
 }
+
+.badge {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 8px;
+}
