--- a/src/pages/profile-user/mobile/mobile.module.scss
+++ b/src/pages/profile-user/mobile/mobile.module.scss
@@ -118,3 +118,8 @@
   justify-content: center;
   align-items: center;
 }
+
+.profileStatus {
+  display: flex;
+  justify-content: space-between;
+}
