--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,19 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  @font-face {
+    font-family: Inter;
+    src: url('/fonts/Inter-Regular.woff2');
+  }
+
+  @font-face {
+    font-family: Inter;
+    font-weight: 600;
+    src: url('/fonts/Inter-SemiBold.woff2');
+  }
+}
+
 pwa-action-sheet {
   position: fixed;
   right: 0;
