Completed tasks 5,6,7(except getting past submissions),8

--- a/src/components/atoms/categories/categories.module.scss
+++ b/src/components/atoms/categories/categories.module.scss
@@ -1,6 +1,7 @@
 .container {
   display: flex;
   flex-wrap: wrap;
+  gap: 8px;
 }
 
 .item {
@@ -11,7 +12,6 @@
   font-size: 0.875rem;
   font-family: 'Work Sans';
   border-left: 1px solid var(--color-gray-04);
-  padding: 0 8px;
   color: var(--color-gray-01);
 }
 
