--- a/src/components/templates/hourly-submissions-card/job-description-card.module.scss
+++ b/src/components/templates/hourly-submissions-card/job-description-card.module.scss
@@ -1,5 +1,3 @@
-
-
 .job {
   display: flex;
   flex-direction: column;
@@ -8,7 +6,7 @@
 
   &__title {
     color: var(--color-gray-dark);
-    font-size: 16px;
+    font-size: var(--font-size-m);
     font-weight: 600;
   }
 
@@ -21,14 +19,21 @@
     border-radius: 8px;
     padding: 1rem;
     margin-top: 16px;
-    .submissions{
+    font-size: var(--font-size-s2);
+    text-align: center;
+
+    .submissions {
       margin-top: 1rem;
+    }
+    .nosubmissions {
+      margin-top: 1rem;
+      color: var(--color-gray-01);
     }
   }
 
   &__total {
     border-top: 1px solid var(--border-gray-01);
-    font-size: 14px;
+    font-size: var(--font-size-s2);
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -43,7 +48,7 @@
 
   &__info {
     color: var(--color-gray-light-1);
-    font-size: 14px;
+    font-size: var(--font-size-s2);
     display: flex;
     align-items: center;
     gap: 8px;
