--- a/src/pages/feed/refactored/mobileHeader.tsx/mobileHeader.module.scss
+++ b/src/pages/feed/refactored/mobileHeader.tsx/mobileHeader.module.scss
@@ -1,4 +1,4 @@
-.header {
+.container {
   height: 13rem;
   padding: 1rem;
   padding-top: 3.75rem;
@@ -29,18 +29,6 @@
   gap: 1rem;
 }
 
-.search {
-  height: 100%;
-  background: #ffffff;
-  border: 1px solid var(--color-gray-04);
-  border-radius: 50px;
-  color: var(--color-gray-03);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: var(--font-size-m);
-}
-
 .title {
   position: relative;
   font-size: var(--font-size-xl);
@@ -53,32 +41,4 @@
   position: relative;
   color: #d4d2d0;
   font-size: var(--font-size-m);
-}
-
-.logo {
-  padding: 0;
-  margin: 0;
-  height: 2rem;
-}
-
-.create {
-  margin: 1.5rem 1rem 0.5rem 1rem;
-}
-
-.createWrapper {
-  display: flex;
-  align-items: center;
-  gap: 1rem;
-}
-
-.createButton {
-  background-color: var(--color-off-white-01);
-  height: 3rem;
-  display: flex;
-  align-items: center;
-  width: 100%;
-  border-radius: 0.5rem;
-  padding: 0 1.5rem;
-  color: var(--color-primary-01);
-  font-size: 1rem;
 }
