--- a/src/pages/complete-mission/mobile/mobile.module.scss
+++ b/src/pages/complete-mission/mobile/mobile.module.scss
@@ -56,7 +56,7 @@
 }
 
 .missionDetailContainer {
-  padding: 1rem;
+  padding: 0.5rem 1rem;
 }
 
 .missionDetailMessage {
@@ -75,6 +75,11 @@
 
 .jobInfoContainer {
   padding: 1rem;
+}
+
+.noSubmissions {
+  text-align: center;
+  color: var(--color-gray-01);
 }
 
 .jobTitle {
@@ -101,29 +106,29 @@
   gap: 0.5rem;
   cursor: pointer;
 }
-.hours{
+.hours {
   margin: 1rem 0;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  .status{
+  .status {
     display: flex;
     align-items: center;
     gap: 0.5rem;
   }
-  .text{
+  .text {
     line-height: 18px;
   }
-  .icon{
+  .icon {
     width: 18px;
     height: 18px;
   }
 }
-.view_more{
+.view_more {
   color: var(--color-primary-01);
   text-decoration: underline green;
   cursor: pointer;
 }
-.btn{
-  margin-top: 1rem;
+.btn {
+  margin-top: 2rem;
 }
