--- a/src/pages/jobs/jobs.module.scss
+++ b/src/pages/jobs/jobs.module.scss
@@ -19,6 +19,11 @@
   background-size: cover;
   background-position: 30%;
   background-color: var(--color-gray-04);
+  @media (max-width: 640px) {
+    border-radius: 0;
+    height: 13rem;
+    padding: 3.75rem 1rem 1rem;
+  }
 }
 
 .title {
@@ -41,4 +46,27 @@
 .followers,
 .connections {
   color: var(--color-gray-02);
+}
+
+.search {
+  height: 100%;
+  background: #ffffff;
+  border: 1px solid var(--color-gray-04);
+  border-radius: 50px;
+  color: var(--color-gray-03);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: var(--font-size-m);
+}
+
+.menu {
+  @media (max-width: 640px) {
+    margin-bottom: 1.625rem;
+    display: grid;
+    grid-template-columns: 2rem 1fr 2rem;
+    grid-template-rows: 2.25rem;
+    align-items: center;
+    gap: 1rem;
+  }
 }
