Fixed minor style (color)

--- a/src/pages/complete-mission/desktop/desktop.module.scss
+++ b/src/pages/complete-mission/desktop/desktop.module.scss
@@ -139,7 +139,7 @@
 }
 .view_more {
   color: var(--color-primary-01);
-  text-decoration: underline green;
+  text-decoration: underline;
   cursor: pointer;
 }
 .hours_btn {
