--- a/src/pages/complete-mission/mobile/mobile.module.scss
+++ b/src/pages/complete-mission/mobile/mobile.module.scss
@@ -126,7 +126,7 @@
 }
 .view_more {
   color: var(--color-primary-01);
-  text-decoration: underline green;
+  text-decoration: underline;
   cursor: pointer;
 }
 .btn {
