--- a/src/pages/submit-hours/mobile/mobile.module.scss
+++ b/src/pages/submit-hours/mobile/mobile.module.scss
@@ -27,7 +27,7 @@
   padding: 12px;
   display: grid;
   grid-template-columns: 44px 1fr;
-  background-color: var(--color-yellow-01);
+  background-color: var(--color-warning-01);
   .congratulationsText {
     line-height: 20px;
     font-size: var(--font-size-s2);
