--- a/src/pages/job-offer-reject/offer/mobile/mobile.module.scss
+++ b/src/pages/job-offer-reject/offer/mobile/mobile.module.scss
@@ -36,3 +36,8 @@
   border-top: 1px solid var(--border-gray-01);
   padding: 1rem;
 }
+
+.inputTitle {
+  font-weight: 600;
+  margin-bottom: 0.5rem;
+}
