--- a/src/pages/submit-hours/submitted-hours-modal/submitted-hours-modal.module.scss
+++ b/src/pages/submit-hours/submitted-hours-modal/submitted-hours-modal.module.scss
@@ -15,7 +15,13 @@
   .rightChevron {
     transform: rotate(180deg);
   }
+  .rightChevron {
+    visibility: visible;
+  }
   .currentWeek {
+    visibility: hidden;
+  }
+  .firstWeek {
     visibility: hidden;
   }
   img {
