--- a/src/pages/notifications/mobile/mobile.module.scss
+++ b/src/pages/notifications/mobile/mobile.module.scss
@@ -9,6 +9,7 @@
   align-items: center;
   padding: var(--safe-area) 1rem 0.812rem 1rem;
   position: fixed;
+  z-index: 1;
   top: 0;
   width: 100%;
 }
