--- a/src/components/atoms/fab/fab.module.scss
+++ b/src/components/atoms/fab/fab.module.scss
@@ -3,11 +3,12 @@
   height: 4rem;
   position: fixed;
   right: 1rem;
-  bottom: 2.5rem;
+  bottom: 6.5rem;
   display: flex;
   justify-content: center;
   align-items: center;
   background-color: var(--color-primary-01);
   border-radius: 50%;
   cursor: pointer;
+  z-index: 1;
 }
