--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -43,3 +43,16 @@
   font-weight: 600;
   src: url('/fonts/Inter-SemiBold.woff2');
 }
+//Nowruz Colors
+$color-primary-200: #ccdbda;
+$color-primary-600: #004a46;
+$color-primary-700: #003b38;
+
+$color-white: #ffffff;
+
+$color-grey-700: #344054;
+$color-grey-300: #d0d5dd;
+
+$color-error-200: #fecdca;
+$color-error-600: #d92d20;
+$color-error-700: #b42318;
