--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -50,9 +50,13 @@ $color-primary-700: #003b38;
 
 $color-white: #ffffff;
 
-$color-grey-700: #344054;
 $color-grey-300: #d0d5dd;
+$color-grey-700: #344054;
+$color-grey-900: #101828;
 
 $color-error-200: #fecdca;
+$color-error-500: #f04438;
 $color-error-600: #d92d20;
 $color-error-700: #b42318;
+
+$color-success-600: #039855;
