--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -44,6 +44,7 @@
   src: url('/fonts/Inter-SemiBold.woff2');
 }
 //Nowruz Colors
+$color-primary-50: #f3f6f6;
 $color-primary-200: #ccdbda;
 $color-primary-600: #004a46;
 $color-primary-700: #003b38;
