--- a/src/Nowruz/general/stepper/stepper.module.scss
+++ b/src/Nowruz/general/stepper/stepper.module.scss
@@ -11,9 +11,16 @@
   color: $color-grey-200;
 }
 
-.titleDiv {
+.titleDivHorizontal {
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
+}
+
+.titleDivVertical {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   justify-content: center;
 }
