--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -54,6 +54,7 @@ $color-white: #ffffff;
 
 $color-grey-200: #eaecf0;
 $color-grey-300: #d0d5dd;
+$color-grey-600: #475467;
 $color-grey-700: #344054;
 $color-grey-900: #101828;
 
