--- a/src/Nowruz/pages/forget-password/forgetPassword.module.scss
+++ b/src/Nowruz/pages/forget-password/forgetPassword.module.scss
@@ -4,6 +4,7 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+  justify-content: center;
 }
 .main {
   flex: 1;
@@ -12,6 +13,7 @@
   align-items: center;
   height: 100vh;
   gap: 24px;
+  max-width: 360px;
 }
 .icon {
   width: 3.5rem;
@@ -34,6 +36,9 @@
 .grey600text {
   color: $color-grey-600;
 }
+.primary700text {
+  color: $color-primary-700;
+}
 
 .form {
   width: 100%;
@@ -49,4 +54,16 @@
   font-weight: 600;
   line-height: 24px;
   letter-spacing: 0em;
+  width: 100%;
+}
+
+.centeredDiv {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.linkButton {
+  padding: 0;
+  text-transform: none;
+  margin-left: 0.3rem;
 }
