--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -55,6 +55,8 @@ $color-white: #ffffff;
 $color-grey-700: #344054;
 $color-grey-300: #d0d5dd;
 $color-grey-200: #eaecf0;
+$color-grey-50: #f9fafb;
+$color-grey-600: #475467;
 
 $color-error-200: #fecdca;
 $color-error-600: #d92d20;
