--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -1,5 +1,6 @@
 @import 'src/components/_primitives.scss';
 .default {
+  text-align: center;
   &:global(.MuiButton-root) {
     text-transform: none;
     box-shadow: 0px 1px 2px 0px rgba(16, 24, 40, 0.05);
