feat: auth flow structure

--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -52,6 +52,7 @@ $color-primary-700: #003b38;
 
 $color-white: #ffffff;
 
+$color-grey-100: #f2f4f7;
 $color-grey-200: #eaecf0;
 $color-grey-50: #f9fafb;
 $color-grey-600: #475467;
