--- a/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
+++ b/src/Nowruz/modules/general/components/SearchDropdown/search-dropdown.module.scss
@@ -1,9 +1,16 @@
 @import 'src/components/_primitives.scss';
-
+.container {
+  width: 100%;
+  // height: 44px;
+  // background-color: aqua;
+}
+.autocompelete {
+}
 .label {
   font-size: 14px;
   font-weight: 500;
   line-height: 20px;
+  text-align: left;
 }
 .option {
   display: flex !important;
@@ -11,7 +18,7 @@
   justify-content: space-between !important;
   padding: 16px !important;
   background-color: $color-white;
-  .label {
+  .optionLabel {
     font-size: 16px;
     font-weight: 500;
     line-height: 24px;
