--- a/src/Nowruz/pages/sign-in/signin.module.scss
+++ b/src/Nowruz/pages/sign-in/signin.module.scss
@@ -2,21 +2,28 @@
 
 .container {
   display: flex;
-  flex-direction: row;
   align-items: center;
+  justify-content: center;
+  padding: 96px 32px 48px 32px;
 }
 .main {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  gap: 32px;
   height: 100vh;
-  padding: 2rem;
-  gap: 24px;
+  width: 100%;
+  max-width: 360px;
 }
 .form {
   display: flex;
   flex-direction: column;
   gap: 24px;
+}
+
+.forgetPassDiv {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .forgotPass {
