add eye icon for password input,change code structure to container

--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -62,3 +62,8 @@
   border-right: solid 1px $color-grey-300;
   padding-right: 14px;
 }
+
+.iconImg {
+  cursor: pointer;
+  background-color: transparent;
+}
