feat: add icon component and icon fonts

--- a/src/index.scss
+++ b/src/index.scss
@@ -2,6 +2,7 @@
 // @import url(https://fonts.googleapis.com/css?family=Hahmlet:700|Work+Sans:bold);
 @import './components/primitives';
 @import './components/reset';
+@import './styles/icons.scss';
 
 @tailwind base;
 @tailwind components;
