--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -65,6 +65,7 @@ $color-grey-blue-50: #d5d9eb;
 $color-grey-blue-200: #f8f9fc;
 $color-grey-blue-700: #363f72;
 
+$color-error-100: #fee4e2;
 $color-error-200: #fecdca;
 $color-error-300: #fda29b;
 $color-error-500: #f04438;
