--- a/src/Nowruz/modules/Auth/containers/onboarding/Skills/skills.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/Skills/skills.module.scss
@@ -1,13 +1,7 @@
 @import 'src/components/_primitives.scss';
-.container {
-  display: flex;
-  flex: 1;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-  height: 100%;
-}
+
 .header {
+  // margin-top: 20px;
   margin-bottom: 44px;
   .title {
     font-size: 18px;
