--- a/src/Nowruz/pages/sign-up/Onboarding/onboarding.module.scss
+++ b/src/Nowruz/pages/sign-up/Onboarding/onboarding.module.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   width: 100%;
+  // height: 100%;
   @media screen and (min-width: 600px) {
     width: 480px;
   }
