fix: sign up issues

--- a/src/Nowruz/pages/sign-up/Email/email.module.scss
+++ b/src/Nowruz/pages/sign-up/Email/email.module.scss
@@ -13,4 +13,12 @@
 }
 .signupTitle {
   text-align: center;
+  color: $color-grey-600;
+}
+
+.copy {
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 20px;
 }
