change button spinner color

--- a/src/components/_reset.scss
+++ b/src/components/_reset.scss
@@ -18,7 +18,7 @@
 *::after {
   box-sizing: border-box;
   font-family: 'Inter';
-  color: var(--color-black-01);
+  // color: var(--color-black-01);
 }
 
 /* Reapply the pointer cursor for anchor tags */
