--- a/src/Nowruz/pages/sign-up/Email/email.module.scss
+++ b/src/Nowruz/pages/sign-up/Email/email.module.scss
@@ -1,5 +1,7 @@
 @import 'src/components/_primitives.scss';
-
+.container {
+  max-width: 1440px;
+}
 .link {
   color: $color-primary-700;
   font-size: 14px;
@@ -21,4 +23,8 @@
   font-style: normal;
   font-weight: 400;
   line-height: 20px;
+  color: $color-grey-600;
+}
+.review {
+  background-color: $color-primary-50;
 }
