--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -28,5 +28,9 @@
   color_error_600: $color-error-600;
   color_error_700: $color-error-700;
 
+  color_success_100: $color-success-100;
+  color_success_500: $color-success-500;
   color_success_600: $color-success-600;
+
+  color_sail_100: $color-sail-100;
 }
