--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -72,4 +72,8 @@ $color-error-500: #f04438;
 $color-error-600: #d92d20;
 $color-error-700: #b42318;
 
+$color-success-100: #d1fadf;
+$color-success-500: #12b76a;
 $color-success-600: #039855;
+
+$color-sail-100: #fbf7f5;
