avatar drop down

--- a/src/index.scss
+++ b/src/index.scss
@@ -3,10 +3,7 @@
 @import './components/primitives';
 @import './components/reset';
 @import './styles/icons.scss';
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import './styles/tailwind.scss';
 
 @layer base {
   @font-face {
