fix design issues on nowruz branch

--- a/src/Nowruz/modules/general/components/input/input.module.scss
+++ b/src/Nowruz/modules/general/components/input/input.module.scss
@@ -90,3 +90,13 @@
   border-right: solid 1px $color-grey-300;
   padding-right: 14px;
 }
+
+.labelContainer {
+  margin-bottom: 6px;
+}
+.label {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0;
+}
