--- a/src/Nowruz/pages/sign-up/Email/email.module.scss
+++ b/src/Nowruz/pages/sign-up/Email/email.module.scss
@@ -10,6 +10,10 @@
   margin-right: 4px;
   margin-left: 4px;
 }
+.link:focus {
+  text-decoration: underline;
+}
+
 .privacy {
   text-align: center;
 }
