--- a/src/Nowruz/modules/general/components/checkbox/checkbox.module.scss
+++ b/src/Nowruz/modules/general/components/checkbox/checkbox.module.scss
@@ -7,6 +7,10 @@
   justify-content: flex-start;
 }
 .label {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 20px;
+  letter-spacing: 0em;
   color: $color-grey-700;
 }
 
