--- a/src/Nowruz/pages/sign-up/Email/email.module.scss
+++ b/src/Nowruz/pages/sign-up/Email/email.module.scss
@@ -24,7 +24,17 @@
   font-weight: 400;
   line-height: 20px;
   color: $color-grey-600;
+  width: 100%;
+  padding-left: 32px;
+  margin-bottom: 32px;
+  @media screen and (max-width: 600px) {
+    display: none;
+  }
 }
 .review {
   background-color: $color-primary-50;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
