--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -49,6 +49,7 @@ $color-primary-100: #e6eded;
 $color-primary-200: #ccdbda;
 $color-primary-600: #004a46;
 $color-primary-700: #003b38;
+$color-primary-800: #002c2a;
 
 $color-white: #ffffff;
 
