--- a/src/Nowruz/pages/userProfile/userProfile.module.scss
+++ b/src/Nowruz/pages/userProfile/userProfile.module.scss
@@ -6,8 +6,11 @@
 }
 
 .leftCol {
-  width: 25%;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 24px;
 }
 .rightCol {
-  width: 75%;
+  flex: 3;
 }
