--- a/src/components/_exports.module.scss
+++ b/src/components/_exports.module.scss
@@ -14,6 +14,7 @@
   color_grey_100: $color-grey-100;
   color_grey_200: $color-grey-200;
   color_grey_300: $color-grey-300;
+  color_grey_400: $color-grey-400;
   color_grey_600: $color-grey-600;
   color_grey_700: $color-grey-700;
   color_grey_900: $color-grey-900;
