--- a/src/components/_primitives.scss
+++ b/src/components/_primitives.scss
@@ -56,6 +56,7 @@ $color-grey-50: #f9fafb;
 $color-grey-100: #f2f4f7;
 $color-grey-200: #eaecf0;
 $color-grey-300: #d0d5dd;
+$color-grey-400: #98a2b3;
 $color-grey-500: #667085;
 $color-grey-600: #475467;
 $color-grey-700: #344054;
