--- a/src/Nowruz/modules/general/components/inputDropDown/inputDropDown.module.scss
+++ b/src/Nowruz/modules/general/components/inputDropDown/inputDropDown.module.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+  position: relative;
 }
 .label {
   font-size: 14px;
@@ -43,18 +44,22 @@
   outline: 0;
 }
 .menu {
+  position: absolute;
+  top: 74px;
   display: flex;
   flex-direction: column;
+  width: 100%;
   max-height: 320px;
   height: fit-content;
   overflow-y: auto;
   border: solid 1px $color-grey-200;
-  margin-top: -7px;
   border-radius: 8px;
+  background-color: white;
 }
 .menuItem {
   display: flex;
   height: 48px;
+  min-height: 48px;
   align-items: center;
   padding: 0 10px 0 10px;
   border-radius: 6px;
