Fixed reported issues

--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -24,7 +24,10 @@
     &:disabled {
       background-color: $color-primary-200;
       color: $color-white;
-      cursor: not-allowed;
+    }
+    &:focus {
+      background-color: $color-primary-700;
+      color: $color-white;
     }
   }
 }
