--- a/src/Nowruz/modules/Auth/components/IntroHeader/header.module.scss
+++ b/src/Nowruz/modules/Auth/components/IntroHeader/header.module.scss
@@ -8,9 +8,19 @@
 }
 
 .title {
+  font-size: 30px;
+  font-weight: 600;
+  line-height: 38px;
+  letter-spacing: 0em;
   margin: 24px 0 12px 0;
   color: $color-grey-900;
+  text-align: center;
 }
 .subtitle {
   color: $color-grey-600;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0em;
+  text-align: center;
 }
