--- a/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
+++ b/src/Nowruz/modules/Auth/containers/onboarding/OrganizationContact/contact.module.scss
@@ -1,10 +1,11 @@
 @import 'src/components/_primitives.scss';
-
 .container {
-  width: 480px;
-  @media screen and (max-width: 600px) {
-    width: 100%;
-  }
+  display: flex;
+  flex: 1;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  height: 100%;
 }
 .header {
   margin-bottom: 44px;
