--- a/src/Nowruz/modules/general/components/selectCardGroup/selectCardGroup.module.scss
+++ b/src/Nowruz/modules/general/components/selectCardGroup/selectCardGroup.module.scss
@@ -4,6 +4,9 @@
   display: flex;
   flex-wrap: wrap;
   gap: 12px;
+  // @media screen and (min-width: 600px) {
+  //   justify-content: center;
+  // }
 }
 .card {
   border: solid 2px $color-grey-200;
@@ -19,6 +22,13 @@
   text-align: center;
   cursor: pointer;
   padding: 16px;
+  @media screen and (max-width: 600px) {
+    padding: 14px;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20px;
+  }
 }
 .cardSelected {
   background-color: $color-primary-50;
