--- a/src/Nowruz/modules/general/components/selectCardGroup/selectCardGroup.module.scss
+++ b/src/Nowruz/modules/general/components/selectCardGroup/selectCardGroup.module.scss
@@ -1,9 +1,10 @@
 @import 'src/components/_primitives.scss';
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
   gap: 12px;
+  grid-auto-rows: 1fr;
 }
 .card {
   border: solid 2px $color-grey-200;
