fixed loader on button while resending OTP

--- a/src/Nowruz/modules/general/components/Button/button.module.scss
+++ b/src/Nowruz/modules/general/components/Button/button.module.scss
@@ -25,6 +25,8 @@
       background-color: $color-primary-200;
       color: $color-white;
     }
+  }
+  &:global(.MuiButton-containedPrimary) {
     &:focus {
       background-color: $color-primary-700;
       color: $color-white;
